examples/bad/UnclosedCall.pas
PROGRAM UnclosedCall;
BEGIN
	writeln('Hello, World!\n'
END.
